[package]
name = "ssg-tracker"
version = "0.1.0"
authors = ["Dabe Vlohn <tar@tara.bar>"]
description = "A simple tracker for Static Site Generators"
license = "MIT"
repository = "https://github.com/dabevlohn/ssg-tracker"
readme = "README.md"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
