[package]
name = "ssg-tracker"
version = "0.1.0"
authors = ["Dabe Vlohn <tar@tara.bar>"]
description = "A simple tracker for Static Site Generators"
license = "MIT"
repository = "https://github.com/dabevlohn/ssg-tracker"
readme = "README.md"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.77"
jsonwebtoken = "9.3.1"
reqwest = "0.12.12"
serde = { version = "1.0.218", features = ["derive"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[dependencies.web-sys]
features = ['Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window']
version = "0.3.77"
